# quant-engine

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: quant_pipeline_dag.py
dashboard/: app.py
docs/: architecture.md  concepts.md
examples/: compare_strategies.py  momentum.yaml  pairs.yaml  run_backtest.py
src/quant_engine/: __init__.py  cli.py  config.py  runner.py
src/quant_engine/analytics/: __init__.py  performance.py  tearsheet.py
src/quant_engine/core/: __init__.py  events.py
src/quant_engine/data/: __init__.py  base.py  parquet_store.py  providers.py  synthetic.py
src/quant_engine/engine/: __init__.py  backtest.py  live.py
src/quant_engine/execution/: __init__.py  base.py  simulated.py
src/quant_engine/ml/: __init__.py  features.py  train.py
src/quant_engine/pipeline/: __init__.py  contracts.py  curate.py  flow.py  ingest.py  lake.py  validate.py
src/quant_engine/portfolio/: __init__.py  portfolio.py
src/quant_engine/risk/: __init__.py  manager.py  metrics.py
src/quant_engine/service/: __init__.py  api.py
src/quant_engine/strategy/: __init__.py  base.py  cross_sectional.py  mean_reversion.py  ml_signal.py  moving_average.py  pairs.py  registry.py
tests/: conftest.py  test_analytics.py  test_backtest.py  test_data.py  test_events.py  test_execution.py  test_live_parity.py  test_ml.py  test_performance.py  test_pipeline_contracts.py  test_pipeline_dag.py  test_pipeline_flow.py  test_portfolio.py  test_service.py  test_strategies.py
