[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-engine"
version = "0.1.0"
description = "An event-driven backtesting & paper-trading engine for systematic trading strategies, with research-to-live parity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Loic Jiraud", email = "loicjiraud@gmail.com" }]
keywords = [
    "quantitative-finance",
    "algorithmic-trading",
    "backtesting",
    "systematic-trading",
    "event-driven",
    "trading-engine",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
]

# Core dependencies are intentionally lean (numpy / pandas / pyarrow only for the
# engine) so the backtester runs anywhere and the test-suite needs no heavy ML libs.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real market data (Yahoo Finance). Optional: the engine ships a deterministic
# synthetic data generator so it runs fully offline and in CI.
data = ["yfinance>=0.2.40"]
# Machine-learning signal strategy + experiment tracking.
ml = ["scikit-learn>=1.3", "xgboost>=2.0", "mlflow>=2.9"]
# REST API to launch backtests / serve live signals.
service = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# Interactive dashboard.
dashboard = ["streamlit>=1.31", "plotly>=5.18"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs",
    "types-PyYAML",
]
all = ["quant-engine[data,ml,service,dashboard]"]

[project.scripts]
quant-engine = "quant_engine.cli:main"

[project.urls]
Homepage = "https://github.com/akaloic/quant-engine"
Repository = "https://github.com/akaloic/quant-engine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quant_engine = ["py.typed"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is idiomatic.
    "B027",  # Empty non-abstract methods are intentional optional hooks (Strategy.on_start).
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
packages = ["quant_engine"]
mypy_path = "src"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true

# Optional third-party libraries ship without type stubs; don't fail on them.
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "xgboost.*",
    "sklearn.*",
    "mlflow.*",
    "streamlit.*",
    "plotly.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["quant_engine"]

[tool.coverage.report]
show_missing = true
skip_covered = true
